fixed emi logic
