# models/transaction.go
@@ -12,7 +12,4 @@ type Transaction struct {
 
 	AmountInPaisa int64 `gorm:"not null"`
 	EventDate     time.Time
-
-	InstallmentPlanId *uint            `gorm:"index"`
-	InstallmentPlan   *InstallmentPlan `gorm:"constraint:OnDelete:RESTRICT;"`
 }
